--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
           
           <div class="column">
-            <form id="submit-form" action="">
+            <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzehXDLQc7uQKLgOGirx-HYn92ZmMa9k3DhF8SKWw/exec">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="name" placeholder="Your name..">
               <label for="lname">Email</label>
