--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
           
           <div class="column">
-            <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzehXDLQc7uQKLgOGirx-HYn92ZmMa9k3DhF8SKWw/exec">
+            <form id="submit-form" action="">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="name" placeholder="Your name..">
               <label for="lname">Email</label>
@@ -33,6 +33,25 @@
             </form>
           </div>
         </div>
-      </div>
-    </body>
+    </div>
+    <script>
+        $("#submit-form").submit((e)=>{
+            e.preventDefault()
+            $.ajax({
+                url:"https://script.google.com/macros/s/AKfycbzehXDLQc7uQKLgOGirx-HYn92ZmMa9k3DhF8SKWw/exec",
+                data:$("#submit-form").serialize(),
+                method:"post",
+                success:function (response){
+                    alert("Form submitted successfully")
+                    window.location.reload()
+                    //window.location.href="https://google.com"
+                },
+                error:function (err){
+                    alert("Something Error")
+    
+                }
+            })
+        })
+    </script>
+</body>
 </html>
