:fire: Remove google script url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         $("#submit-form").submit((e)=>{
             e.preventDefault()
             $.ajax({
-                url:"https://script.google.com/macros/s/AKfycbzehXDLQc7uQKLgOGirx-HYn92ZmMa9k3DhF8SKWw/exec",
+                url:"your url google scripts",
                 data:$("#submit-form").serialize(),
                 method:"post",
                 success:function (response){
